<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".presentation.detailedweather.DayWeatherFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidity_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/avg_humidity"
                android:textColor="?attr/colorOnSecondary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humidity_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/wind_speed_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/avg_wind_speed"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wind_speed_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/cloud_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/avg_cloudiness"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/cloud_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/pressure_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/avg_pressure"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/pressure_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/max_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/max_temp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/max_temp_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/min_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/min_temp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/min_temp_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/wind_gust_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/wind_gust"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/wind_gust_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

            <TextView
                android:id="@+id/visibility_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="@string/avg_visibility"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/visibility_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorOnSecondary"
                android:layout_marginBottom="10dp"
                android:text="" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>